adm-k8s-yamls/Exercicios/16-NetworkPolicy/frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - {}
  egress:
  - {}
